--- a/page.html
+++ b/page.html
@@ -15,7 +15,9 @@
   <div class="modal-container">
     <div class="modal">
       <h4> One Piece <sub>luffy</sub></h4>
-      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quo aspernatur fuga nihil quam quaerat dolorum amet unde nulla esse?</p>
+      <p> Monkey D. Luffy surnommé de manière récurrente Luffy au chapeau de paille, Mugiwara, est un personnage de One Piece . Il est intronisé en tant que garçon ayant un corps élastique, une faculté qu'il a développée après avoir mangé un fruit du démon. Il est le fondateur et le capitaine de l'équipage de Chapeau de paille. Son rêve de toujours est de devenir le roi des pirates en trouvant le trésor légendaire, le One Piece, laissé par le défunt roi des pirates, Gol D. Roger. Selon lui, le roi des pirates est l'homme le plus libre du monde.il est considéré comme étant l'un des Quatre Empereurs.
+
+        Il est le fils du Monkey D. Dragon, ainsi que le petit-fils paternel du héros de la Marine, Monkey D. Garp. aussi le frère adoptif  Portgas D. Ace, et  Sabo.</p>
       <button class=" btn btn-in">Close</button>
     </div>
   </div>
