--- a/page.html
+++ b/page.html
@@ -11,6 +11,8 @@
 <body>
   <h2>Test Modal</h2>
   <button class=" btn btn-out"> More info</button>
+  <!-- star btn modal -->
+  <!-- end btn modal -->
   <!-- star modal -->
   <div class="modal-container">
     <div class="modal">
